# memra

./: .gitignore  AUDIT_REPORT.md  Cargo.toml  Cross.toml  LICENSE  README.md
.claude-plugin/: INSTALL.md  plugin.json
agents/: memory-curator.md
commands/: mem.md  remember.md
hooks/: hooks.json  ma-hook-rust.sh
memra-core/: Cargo.toml
memra-core/examples/: probe_dedup_s02.rs  probe_embed.rs
memra-core/src/: convo_normalizer.rs  experience.rs  lib.rs
memra-core/src/core/: auto_classifier.rs  commercial_number_detector.rs  memory_policy.rs  mod.rs  safety_filter.rs  write_orchestrator.rs
memra-core/src/embedding/: mod.rs
memra-core/src/governance/: mod.rs
memra-core/src/llm/: mod.rs
memra-core/src/retrieval/: canonical_reader.rs  cjk_fallback.rs  mod.rs  postprocess.rs  recall.rs  scoring.rs  search.rs
memra-core/src/storage/: cold_storage.rs  db.rs  mod.rs  session_tokens_writer.rs  sessions_writer.rs  writer.rs
memra-core/tests/: approver_parity.rs  auto_classifier_write_path.rs  checkpoint_idempotency.rs  cold_storage_transaction.rs  commercial_number_detector.rs  embedding_dim_contract.rs  exact_self_recall.rs  include_constitution_filter.rs  insert_note_relation_writer.rs  l0_apply_change.rs  legacy_vector_skip.rs  memory_policy_wire.rs  note_events_parity.rs  project_isolation.rs  search_parity.rs  trust_gate_activation.rs  trust_gate_dream_gate.rs  trust_gate_hebbian.rs  trust_gate_personal.rs  trust_gate_ttl.rs  wake_search_drift_red.rs  write_null_fuzz.rs  write_parity.rs  writer_error_handling.rs
memra-core/tests/fixtures/: approver_canonicalization.json  embed_parity_reference.json  topic_key_parity.json
memra-core/tests/parity/: fastembed_cosine.rs  mod.rs
memra-embed-worker/: Cargo.toml
memra-embed-worker/src/: main.rs
memra-server/: Cargo.toml  build.rs
memra-server/src/: config.rs  lib.rs  main.rs  service.rs
memra-server/src/audit/: mod.rs
memra-server/src/cli/: admin.rs  mod.rs  phase4.rs
memra-server/src/transport/: admission.rs  auth.rs  http.rs  idempotency.rs  mod.rs  session.rs  session_open.rs
memra-server/tests/: audit_actor.rs  bind_safety.rs  governance_spoof.rs
packaging/homebrew/: README.md  memra.rb  memra@next.rb
plugins/Memra/: README.md  __init__.py  memory_provider.py  plugin.yaml  pyrightconfig.json
plugins/Memra/commands/: __init__.py  ma_doctor.py  ma_setup.py  ma_sync.py
plugins/Memra/tests/: __init__.py  test_memory_provider.py
scripts/: README.md  check_no_plaintext_secrets.sh  consolidate_nightly.sh  ingest-roots.yaml.example  install-git-hooks.sh  install_phase1_hooks.sh  local-ci.sh  ma-truth-banner.sh  mcp_wrapper.sh  nightly-bench.sh  offsite-backup.sh  r3-real-gates.sh  render_formula.sh  safe-merge.sh  smoke.sh  verify_homebrew_release.sh  zombie-cleaner.sh
scripts/benchmarks/: v71-queries.tsv
scripts/git-hooks/: pre-commit  pre-push
scripts/launchd/: com.memra.background-workers.plist.example  com.memra.consolidate.plist.example  com.memra.daemon.plist.example  com.memra.morning-ingest.plist.example  com.memra.nightly-bench.plist.example  com.memra.wiki-sync.plist.example  com.memra.zombie-cleaner.plist.example
scripts/parity_scenarios/: manifest.json  s01_pure_read_search_bundle.jsonl  s02_pure_write_categories.jsonl  s03_exact_duplicate_dedup.jsonl  s04_supersede_cascade.jsonl  s05_l0_happy_path.jsonl  s06_l0_duplicate_approver_reject.jsonl  s07_checkpoint_upsert_chain.jsonl  s08_report_outcome_chain.jsonl  s09_synthetic_idempotency_add_rule.jsonl  s10_synthetic_idempotency_checkpoint.jsonl  s11_concurrency_add_rule_burst.jsonl  s12_rollback_add_rule_trigger.jsonl  s13_rollback_governance_trigger.jsonl  s14_cold_storage_month_boundary.jsonl  s15_dim_mismatch_injection.jsonl  s16_jsonl_tail_corruption.jsonl  s17_auto_link_cluster.jsonl  s18_mixed_write_surface.jsonl  s19_cross_layer_event_fact.jsonl  s20_mixed_stress_finale.jsonl
skills/memory-rules/: SKILL.md
templates/: com.memra.transcript-daemon.plist.template
(+1 files in other folders)
