[package]
name = "memra-core"
description = "Memra core library — embeddable, no transport deps"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
personal = []

[dependencies]
rusqlite = { workspace = true }
deadpool-sqlite = { workspace = true }
fastembed = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
unicode-normalization = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = { workspace = true }
