[package]
name = "memra-server"
description = "Memra server — CLI + MCP stdio/HTTP transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "memra"
path = "src/main.rs"

[lib]
name = "memra_server"
path = "src/lib.rs"

[dependencies]
memra-core = { path = "../memra-core" }
rmcp = { workspace = true }
rusqlite = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
moka = { workspace = true }
clap = { workspace = true }
blake3 = { workspace = true }
getrandom = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
